# restreaming_automation

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.bat  start.bat
data/: presets.db
discord-bot/src/: discordManager.ts
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
scripts/: install-systemd.sh  setup.ps1  setup.sh  setup_obs_scenes.py  start.ps1  start.sh
scripts/systemd/: restream-api@.service  restream-nodecg@.service
src/: __init__.py  __main__.py  config.py  detector.py  ingest.py  obs_control.py  presets.py  server.py  slobs_control.py
src/static/: dashboard.html
templates/: .gitkeep
